# memacc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: concepts.md  ideas.md
doc/dia/: Diagram2.dia  Diagram3.dia  plan-scatter-gather.md
examples/: read_bit.rs
scripts/: add_separator.py  generate-index.py  generate-indices.py  generate-ranges.py  generate-read-scattered-tests.py  generate-write-bits-scattered-tests.py  generate-write-bits-tests.py  make_header.py  path_output.py
src/: bitman.rs  lib.rs  memman.rs
src/bitman/: checked.rs  read.rs  unchecked.rs
src/bitman/checked/: index.rs  indices.rs  read.rs  write.rs
src/bitman/checked/index/: generated.rs
src/bitman/checked/indices/: generated.rs
src/bitman/unchecked/: bits.rs  n_ones.rs  n_ones_offset.rs  ones.rs  read.rs  write.rs  zeros.rs
src/bitman/unchecked/read/: are_bits_high.rs  are_bits_high_scattered.rs  are_bits_low.rs  are_bits_low_scattered.rs  is_bit_high.rs  is_bit_low.rs  read_bit.rs  read_bits.rs  read_bits_scattered.rs  tests.rs  tests_generated.rs
src/bitman/unchecked/write/: clear_bit.rs  clear_bits.rs  clear_bits_scattered.rs  clear_n_left.rs  clear_n_right.rs  set_bit.rs  set_bits.rs  set_bits_scattered.rs  tests.rs  tests_generated_write_bits.rs  tests_generated_write_bits_scattered.rs  write_bit.rs  write_bits.rs  write_bits_scattered.rs
src/memman/: clear_address_bit.rs  modify_address_value.rs  read_from_address.rs  set_address_bit.rs  write_to_address.rs
