[package]
name = "memacc"
version = "0.1.6"
authors = ["Roni Hämäläinen <roni.hamalainen@tuni.fi>"]
edition = "2021"
description = "Memory access functions."
readme = "README.md"
repository = "https://github.com/RHamalainen/memacc"
license = "MIT OR Apache-2.0"
keywords = ["memory", "bit", "access", "manipulation"]
categories = ["embedded", "memory-management", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-std = []

[dependencies]
